xplorer1/app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self

 */

 /* for sign in forms */

 @import "normalize";
 @import "satellites";
 @import "comments";

 main{
   background-color: black;
   color: white;
   font-size: 35px;
   text-align: center;
   font-family: 'Share Tech Mono', monospace;
 }

 .border-form-div {
  max-width: 300px;
  padding: 19px 29px 29px;
  margin: 0 auto 20px;
  background-color: #fff;
  border: 1px solid #e5e5e5;
  -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
          border-radius: 5px;
  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
          box-shadow: 0 1px 2px rgba(0,0,0,.05);
}
.border-form-div .form-signin-heading,
.border-form-div .checkbox {
  margin-bottom: 10px;
}
.border-form-div input[type="text"],
.border-form-div input[type="email"],
.border-form-div input[type="password"] {
  font-size: 16px;
  height: auto;
  margin-bottom: 15px;
  padding: 7px 9px;
}

 #map {
     height: 40vw;
     width: 100%;
     left: 0;
     position: absolute;
     top: 0;

 }


 footer {
   background-image: url(http://i.imgur.com/pzThpR1.jpg);
   background-position: center;
   color: white;
    position: fixed;
    height: 50px;
    bottom: 0;
    width: 100%;
  //   background-color: #1b1b1b;
  // background-image: -moz-linear-gradient(top, #222222, #111111);
  // background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#222222), to(#111111));
  // background-image: -webkit-linear-gradient(top, #222222, #111111);
  // background-image: -o-linear-gradient(top, #222222, #111111);
  // background-image: linear-gradient(to bottom, #222222, #111111);
  // background-repeat: repeat-x;
  // border-color: #252525;
  // filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff111111', GradientType=0);
}

